# traverse-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: commands.rs  config.rs  generator_worker.rs  lib.rs  main.rs  traverse_adapter.rs  utils.rs
src/handlers/: common.rs  execute_command.rs  mod.rs
tests/: workspace_e2e.rs
vscode-extension/: .vscodeignore  README.md  build-extension.sh  package.json
vscode-extension/src/: extension.ts
